# BeadSpec

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  eslint.config.js  index.html  package.json  quick-capture.html  vite.config.ts
.beads/: issues.jsonl  metadata.json
.claude/: settings.json
.claude/hooks/: README.md  eslint-fix.sh  gitnexus-analyze.sh  gitnexus-commit-reminder.sh  gitnexus-impact-reminder.sh  no-any.sh  no-mock-module.sh  ruflo-agent-outcome.sh  ruflo-agent-route.sh  ruflo-post-edit.sh  ruflo-post-push.sh  ruflo-pre-commit.sh  ruflo-pre-edit.sh  ruflo-session-end.sh  tdd-nudge.sh  typecheck.sh
.codex/: hooks.json
.codex/hooks/: bd-tag-apply.sh  (+12 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs-site/: index.md  package.json
openspec/: config.yaml  project.md
scripts/: bd-capture-review.sh  create-worktree.sh  setup-worktree-beads.sh
src/: App.css  App.tsx  QuickCaptureApp.tsx  bindings.ts  index.css  ipc.ts  quick-capture.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-window.json  quick-capture.json
src-tauri/icons/: icon.icns
src-tauri/src/: env_fix.rs  lib.rs  main.rs  recovery_log.rs  settings.rs
src-tauri/src/bd/: runner.rs
src-tauri/src/commands/: app.rs  bd_mol.rs  external.rs  gitnexus.rs  gitnexus_processes.rs  gitnexus_status.rs  gitnexus_symbols.rs  mod.rs  openspec.rs  openspec_validate_history.rs  project.rs  read.rs  recovery.rs  reviews.rs  ruflo_memory.rs  ruflo_sessions.rs  workers.rs  write.rs
src-tauri/src/db/: dolt_server.rs  mod.rs  poller.rs  pool.rs  watchers.rs
src-tauri/src/db/recovery/: enumerate.rs  kill.rs  mod.rs  predicates.rs
src-tauri/src/events/: activity.rs
src-tauri/src/notifications/: manager.rs
src-tauri/src/tray/: mod.rs
src-tauri/tests/: bindings.rs  config_security_test.rs  spawn_managed_test.rs
(+490 files in other folders)
